# P1-Landmine

./: CMakeLists.txt  README.md  Riskfactor.c
Project1LandmineGrid/: CMakeLists.txt  main.c
Project1LandmineGrid/src/: Riskfactor.c  dijkstra.c  functions.h  main.c  program.c
src/: CMakeLists.txt  LandmineGridGenerator.c  RiskFactor.c  dijkstra.c  dijkstra.h  functions.h  grid.h  landmineGame.c  main.c  main.h  program.c
